# portalias

./: .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: _checks.yml  _end-to-end-tests.yml  main-push.yml  pull-request.yml
portalias/: main.py
portalias/models/: port_alias.py
portalias/services/: docker_service.py  iptables_service.py
src/portalias/main/: main.py
src/portalias/main/services/: docker_service.py  iptables_service.py
tests/: README.md  simple.sh
tests/manual/multiple-aliases/: compose.yml
tests/manual/multiple-aliases-and-protos/: compose.yml
tests/manual/multiple-protos/: compose.yml
tests/manual/simple/: compose.yml
tests/manual/simple-no-dry-run/: compose.yml
tests/manual/udp/: compose.yml
tests/test_simple/: compose.yml  test.sh
